--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Simulador de Antecipação</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="left-content">
+          <h1 class="title">Simule sua Antecipação</h1>
+          <form id="form">
+            <div class="input-group">
+              <label for="value">Informe o valor da venda *</label>
+              <div class="prefix-input">
+                <span class="prefix">R$:</span>
+                <input
+                  id="value"
+                  type="number"
+                  step="0.01"
+                  min="0"
+                  class="main-input"
+                  required
+                />
+              </div>
+            </div>
+
+            <div class="input-group">
+              <label for="installments">Em quantas parcelas *</label>
+              <input
+                id="installments"
+                type="number"
+                class="main-input"
+                required
+              />
+              <small class="text-muted">Máximo de 12 parcelas</small>
+            </div>
+
+            <div class="input-group">
+              <label for="mdr">Informe o percentual MDR *</label>
+              <input id="mdr" type="number" class="main-input" required />
+            </div>
+          </form>
+        </div>
+        <div class="right-content">
+          <h2 class="results-title">Você receberá:</h2>
+
+          <div class="result">
+            <label for="tomorrow" class="result-label">Amanhã:</label>
+            <span class="result-value" id="tomorrow">R$ 0,00</span>
+          </div>
+
+          <div class="result">
+            <label for="two_weeks" class="result-label">Em 15 dias:</label>
+            <span class="result-value" id="two_weeks">R$ 0,00</span>
+          </div>
+
+          <div class="result">
+            <label for="one_month" class="result-label">Em 30 dias:</label>
+            <span class="result-value" id="one_month">R$ 0,00</span>
+          </div>
+          <div class="result">
+            <label for="three_month" class="result-label">Em 90 dias:</label>
+            <span class="result-value" id="three_month">R$ 0,00</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
