Adicionando script para gerenciar mudanças no DOM

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <script src="https://unpkg.com/imask"></script>
     <script src="scripts/index.js"></script>
+    <script src="libs/mdr.js"></script>
   </head>
   <body onload="main()">
     <div class="container">
@@ -67,7 +68,7 @@
           </div>
           <div class="result">
             <label for="three_month" class="result-label">Em 90 dias:</label>
-            <span class="result-value" id="three_month">R$ 0,00</span>
+            <span class="result-value" id="three_months">R$ 0,00</span>
           </div>
         </div>
       </div>
